# sovchain-for-CBDC

./: .gitignore  LICENSE  README.md  requirements.txt
docs/: SIMULATION_METHODOLOGY.md  ZKP_SPECIFICATION.md
move-contracts/: Move.toml  README.md
move-contracts/sources/: compliance.move  governance.move  mint.move
scripts/: run_all_simulations.sh
simulations/: __init__.py  config.py  dos_resilience.py  economic_model.py  execution_cost_model.py  latency_simulation.py
zkp/: Cargo.toml  README.md
zkp/circuits/: mint_circuit.circom  pedersen.circom  range_proof.circom
zkp/src/: lib.rs  prover.rs  verifier.rs
