[package]
name = "sovchain-zkp"
version = "0.1.0"
edition = "2021"
authors = ["Ajmal Muhammad <muaj07@gmail.com>", "Tahir Mahmood <tahirmahmood813@gmail.com>"]
description = "Zero-Knowledge Proof framework for SovChain CBDC confidential minting"
license = "MIT"
repository = "https://github.com/[AUTHOR]/sovchain-artifacts"
keywords = ["zkp", "groth16", "cbdc", "blockchain", "privacy"]
categories = ["cryptography", "blockchain"]

[lib]
name = "sovchain_zkp"
path = "src/lib.rs"

[[bin]]
name = "zkp-cli"
path = "src/bin/cli.rs"

[dependencies]
# Core arkworks libraries for Groth16
ark-ff = "0.4"
ark-ec = "0.4"
ark-bn254 = "0.4"
ark-groth16 = "0.4"
ark-relations = "0.4"
ark-r1cs-std = "0.4"
ark-serialize = "0.4"
ark-std = "0.4"
ark-snark = "0.4"

# Constraint system
ark-crypto-primitives = { version = "0.4", features = ["r1cs"] }

# Randomness
rand = "0.8"
rand_chacha = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
hex = "0.4"

# Hashing (SHA-256 for witness computation)
sha2 = "0.10"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# CLI
clap = { version = "4.0", features = ["derive"] }

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

[dev-dependencies]
criterion = "0.5"
proptest = "1.0"

[features]
default = ["parallel"]
parallel = ["ark-std/parallel", "ark-ff/parallel", "ark-ec/parallel", "ark-groth16/parallel"]
wasm = ["ark-std/print-trace"]

[[bench]]
name = "proving"
harness = false

[profile.release]
lto = true
codegen-units = 1
panic = "abort"

[profile.bench]
lto = true
